# football-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
football_analysis/: data.py  team_analyze.py  utils.py
resources/: RESOURCES.md
