[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["kirill-push <kirillpush@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
exclude = [
    'resources',
    '.mypy_cache',
    'football_analysis/__pycache__',
]
